--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "ioredis": "^5.6.0",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.9.5",
@@ -27,6 +28,7 @@
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "socket.io": "^4.8.1"
   }
 }
